--- a/index.html
+++ b/index.html
@@ -25,7 +25,51 @@
         </style>
     </head>
     <body>
-        <h1>Phone</h1>
+        <section>
+            <div class="container py-5 text-center">
+                <div class="row">
+                    <h2>Search your phone</h2>
+                    <div class="input-group my-3">
+                        <input
+                            type="text"
+                            class="form-control py-3"
+                            placeholder="Search phone"
+                            aria-label="Recipient's username"
+                            aria-describedby="button-addon2"
+                        />
+                        <button
+                            class="btn px-4 btn-outline-secondary"
+                            type="button"
+                            id="button-addon2"
+                        >
+                            Search
+                        </button>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card m-2 border-0 shadow">
+                            <div class="p-3">
+                                <img
+                                    src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-mini.jpg"
+                                    class="card-img-top"
+                                    alt="..."
+                                />
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card
+                                    title and make up the bulk of the card's
+                                    content.
+                                </p>
+                                <a href="#" class="btn btn-primary"
+                                    >Go somewhere</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
