--- a/index.html
+++ b/index.html
@@ -45,32 +45,11 @@
                             Search
                         </button>
                     </div>
-                    <div class="col-lg-3">
-                        <div class="card m-2 border-0 shadow">
-                            <div class="p-3">
-                                <img
-                                    src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-mini.jpg"
-                                    class="card-img-top"
-                                    alt="..."
-                                />
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">
-                                    Some quick example text to build on the card
-                                    title and make up the bulk of the card's
-                                    content.
-                                </p>
-                                <a href="#" class="btn btn-primary"
-                                    >Go somewhere</a
-                                >
-                            </div>
-                        </div>
-                    </div>
+                    <div id="phones-container" class="row"></div>
                 </div>
             </div>
         </section>
-
+        <script src="./script.js"></script>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
